--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/01-sequence.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/01-sequence.mdx
@@ -104,7 +104,7 @@ You will be able to use the following **building blocks** that others have creat
 You will be able to instruct the computer to:
 
 - [Call methods](../03-method-call) to run their instructions.
-- [Assign variables](../08-assignment-statement) a value
+- Store a value in a variable (called [assigning a variable](../08-assignment-statement) a value)
 
 By putting these together you will be able to build some small programs that show visualisations and calculate values. The next chapter in your journey explore how we can make these more dynamic by controlling the sequence of actions.
 
