shuffle putting together details

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-00-change-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-00-change-calculator.mdx
@@ -27,17 +27,17 @@ This start by understanding what you want the program to do. This will involve d
 
 <a id="listingSimpleChange"></a>
 ```bash
-$ ./SimpleChange
+$ dotnet run
 Cost of item (in cents): 15
 Amount paid (in cents): 500
 Change: 2 x $2, 0 x $1, 1 x 50c, 1 x 20c, 1 x 10c, 1 x 5c
 
-$ ./SimpleChange
+$ dotnet run
 Cost of item (in cents): 150
 Amount paid (in cents): 250
 Change: 0 x $2, 1 x $1, 0 x 50c, 0 x 20c, 0 x 10c, 0 x 5c
 
-$ ./SimpleChange
+$ dotnet run
 Cost of item (in cents): 175 
 Amount paid (in cents): 200
 Change: 0 x $2, 0 x $1, 0 x 50c, 1 x 20c, 0 x 10c, 1 x 5c
