--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-06-wrap-up.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-06-wrap-up.mdx
@@ -36,7 +36,7 @@ Write("Payment in cents: ");
 int amountPaid = ToInt32(ReadLine());
 
 // Calculate the change
-int changeValue = costOfItem - amountPaid;
+int changeValue = amountPaid - costOfItem;
 int toGive;
 
 // Give Change
@@ -48,7 +48,7 @@ changeValue = changeValue - toGive * TWO_DOLLARS;
 Write($"{toGive} x $2, ");
 
 // Give $1
-toGive = changeValue / ONE_DOLLARS;
+toGive = changeValue / ONE_DOLLAR;
 changeValue = changeValue - toGive * ONE_DOLLAR;
 Write($"{toGive} x $1, ");
 
