Remove image captions up to current editing progress.

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/03-method-call.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/03-method-call.mdx
@@ -91,12 +91,8 @@ export const sliderImages = [
 
 A method call is an instruction that gets the computer to run the code in a [method](../02-method). You use the name of the method to identify which method you want to run. Some methods require data, which you must pass as **arguments** to the method as part of the method call.
 
-[Figure 5.3](#FigureMethodCall) shows the concepts related to method calls.
-<br/>
-<a id="FigureMethodCall"></a>
-
-![Figure 5.3 A method calls runs a method, passing in values for the method to use](./images/method-call-concept.png "A method calls runs a method, passing in values for the method to use")
-<div class="caption"><span class="caption-figure-nbr">Figure 5.3: </span>A method calls runs a method, passing in values for the method to use</div><br/>
+![A method calls runs a method, passing in values for the method to use](./images/method-call-concept.png "A method calls runs a method, passing in values for the method to use")
+<div class="caption">A method calls runs a method, passing in values for the method to use</div><br/>
 
 ## Method Call - why, when, and how
 
@@ -134,12 +130,10 @@ A method call allows you to run the code in a [method](../02-method), getting it
 
 :::tip[Syntax]
 A method call looks like a single instruction in your source code.
-[Figure 5.4](#FigureMethodCallSyntax) shows the C# syntax for one.
+The C# syntax for one is structured like this:
 
-<a id="FigureMethodCallSyntax"></a>
-
-![Figure 5.4 The syntax of a method call](./images/method-call.png "The syntax of a method call")
-<div class="caption"><span class="caption-figure-nbr">Figure 5.4: </span>The syntax of a method call</div><br/>
+![The syntax of a method call](./images/method-call.png "The syntax of a method call")
+<div class="caption">The syntax of a method call</div><br/>
 :::
 
 A method call consists of a method's name followed by an opening parenthesis, zero or more arguments (delimited by commas), a closing parenthesis, then a semicolon.
