Remove mention of the stack from sequence and method call sliders.

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/08-assignment-statement.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/08-assignment-statement.mdx
@@ -29,7 +29,6 @@ import Slide2double from './images/assignment-statements-in-depth/assignment-sta
 import Slide3double from './images/assignment-statements-in-depth/assignment-statement-double-division-03.png';
 import Slide4double from './images/assignment-statements-in-depth/assignment-statement-double-division-04.png';
 
-
 export const sliderImagesAssignInt = [
   {
     src: Slide1int.src,
@@ -222,8 +221,6 @@ export const sliderImagesAssignInt = [
   }
 ];
 
-
-
 export const sliderImagesAssignDouble = [
   {
     src: Slide1double.src,
@@ -261,17 +258,18 @@ export const sliderImagesAssignDouble = [
   }
 ];
 
-The Assignment Statement is an **instruction** that stores a value in a [Variable](../12-variable). You use this instruction any time you want to update the value of a variable.
-<br/>
-<a id="FigureAssignmentStatement"></a>
+The assignment statement is an **instruction** that stores a value in a [variable](../07-variable). You use this instruction any time you want to update the value of a variable.
 
-![Figure 5.19 Assignment Statements assign values to Variable](./images/assignment-statement-concept.png "Assignment Statements assign values to Variable")
+![An assignment statements assigns a value to a variable](./images/assignment-statement-concept.png "An assignment statements assigns a value to a variable")
 
-<div class="caption"><span class="caption-figure-nbr">Figure 5.19: </span> A Assignment Statements assign values to Variable</div> <br/>
+<div class="caption">An assignment statements assigns a value to a variable</div> <br/>
 
-The assignment statement performs two actions. First, it calculates the value of the expression (calculation) on the right-hand side of the assignment operator (the `=`). Once it has the value, it stores the value (assigns it) to the variable on the left-hand side of the assignment operator.
+The assignment statement performs two actions. First, it calculates the value of the [expression](../04-expression) (calculation) on the right-hand side of the assignment operator (the `=`). Once it has the value, it stores the value (assigns it) to the variable on the left-hand side of the assignment operator.
 
 ## Assignment statement up close
+
+The following sliders show how the assignment statement works in detail.
+These are both relatively simple programs, but notice how much is going on behind the scenes!
 
 ### Assigning an int division result to an int variable
 
